Fixed spacing

--- a/style.css
+++ b/style.css
@@ -93,7 +93,6 @@ body {
   color: white;
   display: flex;
   justify-content: center;
-  margin-top: 50px;
   font-size: 22pt;
 }
 
